# fox

./: README.md  main.py  mongocon.py  pyproject.toml  reload.py  teste.py  traducoes.py
bkpdb/: TELEGRAMLOJA.Pagamentos.csv  TELEGRAMLOJA.Usuarios.csv
